tests/fixtures/original-compiler/failing/HalogenStateIncorrectAnnotationOnTypeVariable/Lib2.purs
module Lib2
  ( module Exports
  ) where

import Control.Monad.State.Class (get, gets, modify, modify_, put) as Exports
